--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,12 @@
   --otro: rgb(254, 83, 83);
 }
 
+*{
+  
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 
 
 body {
@@ -36,21 +42,17 @@ a:link, a:visited, a:active {
 
 button{
   background: transparent;
-  width: 100px;
   color: var(--titulo);
   padding: 10px;
   font-size: 1em;
-  
   text-decoration: none;
   border: 2px solid var(--titulo);
   border-radius: 7px;
-  height: 30px;
 }
 
 button:hover{
   background: var(--titulo);
   color: var(--fondo);
-  
 }
 
 span{
